Fix stars and forks numbers not aligning

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,7 @@
 /* Imports */
 
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
 
 /* Variables */
 
@@ -8,6 +9,7 @@ $small-screen: 48em !default;
 $medium-screen: 62em !default;
 $large-screen: 75em !default;
 $font-family: "Raleway", sans-serif;
+$font-family-numbers: "Josefin Sans", sans-serif;
 $font-size-base: 1rem !default;
 $font-size-h1: 2rem !default;
 $font-weight-strong: 600;
@@ -581,7 +583,7 @@ a {
 
 .project-stars-forks {
   fill: $text-color;
-  margin-right: 0.5rem;
+  font-family: $font-family-numbers;
 }
 
 .tag-wrapper {
